updated the product gallery cards style

--- a/index.html
+++ b/index.html
@@ -51,59 +51,59 @@
                 <div class="product-gallery">
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="./assets/img/Electric-car.jpg" alt="Electric car image">
+                            <img src="./assets/img/Electric-car-removebg-preview.png" alt="Electric car image">
                         </div>
-                        <p class="product-name">Model: City Car</p>
-                        <button class="product-CTA-button">Ver más</button>
+                        <p class="product-name">City Car</p>
+                        <button class="product-CTA-button">Cotizar modelo</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="./assets/img/Electric-car.jpg" alt="Electric car image">
+                            <img src="./assets/img/Electric-car-removebg-preview.png" alt="Electric car image">
                         </div>
                         <p class="product-name">Model: City Car</p>
-                        <button class="product-CTA-button">Ver más</button>
+                        <button class="product-CTA-button">Cotizar modelo</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="./assets/img/Electric-car.jpg" alt="Electric car image">
+                            <img src="./assets/img/Electric-car-removebg-preview.png" alt="Electric car image">
                         </div>
                         <p class="product-name">Model: City Car</p>
-                        <button class="product-CTA-button">Ver más</button>
+                        <button class="product-CTA-button">Cotizar modelo</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="./assets/img/Electric-car.jpg" alt="Electric car image">
+                            <img src="./assets/img/Electric-car-removebg-preview.png" alt="Electric car image">
                         </div>
                         <p class="product-name">Model: City Car</p>
-                        <button class="product-CTA-button">Ver más</button>
+                        <button class="product-CTA-button">Cotizar modelo</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="./assets/img/Electric-car.jpg" alt="Electric car image">
+                            <img src="./assets/img/Electric-car-removebg-preview.png" alt="Electric car image">
                         </div>
                         <p class="product-name">Model: City Car</p>
-                        <button class="product-CTA-button">Ver más</button>
+                        <button class="product-CTA-button">Cotizar modelo</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="./assets/img/Electric-car.jpg" alt="Electric car image">
+                            <img src="./assets/img/Electric-car-removebg-preview.png" alt="Electric car image">
                         </div>
                         <p class="product-name">Model: City Car</p>
-                        <button class="product-CTA-button">Ver más</button>
+                        <button class="product-CTA-button">Cotizar modelo</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="./assets/img/Electric-car.jpg" alt="Electric car image">
+                            <img src="./assets/img/Electric-car-removebg-preview.png" alt="Electric car image">
                         </div>
                         <p class="product-name">Model: City Car</p>
-                        <button class="product-CTA-button">Ver más</button>
+                        <button class="product-CTA-button">Cotizar modelo</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="./assets/img/Electric-car.jpg" alt="Electric car image">
+                            <img src="./assets/img/Electric-car-removebg-preview.png" alt="Electric car image">
                         </div>
                         <p class="product-name">Model: City Car</p>
-                        <button class="product-CTA-button">Ver más</button>
+                        <button class="product-CTA-button">Cotizar modelo</button>
                     </div>
                 </div>
                 <div class="product-pagination">
