updated styles for the side menu

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./assets/css/style.css" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Roboto&family=Open+Sans"
+        />
         <title>Electric Car Store</title>
         <script
             src="https://kit.fontawesome.com/4476d1b0ec.js"
@@ -15,7 +19,7 @@
             <nav>
                 <div class="brand">
                     <i class="fa-solid fa-car fa-xl"></i>
-                    <p >Electric Cars</p>
+                    <p>Thunderbolt</p>
                 </div>
                 <div class="menu">
                     <i class="fa-solid fa-bars fa-xl"></i>
@@ -31,19 +35,35 @@
                 <h1>Presentamos el nuevo DeLorean Alpha 5</h1>
                 <div class="image-gallery-container">
                     <div class="image-container active">
-                        <img class="image" src="./assets/img/Delorean-1.jpg" alt="Delorean Alpha 5">
+                        <img
+                            class="image"
+                            src="./assets/img/Delorean-1.jpg"
+                            alt="Delorean Alpha 5"
+                        />
                     </div>
                     <div class="image-container">
-                        <img src="./assets/img/Delorean-2.jpg" alt="Delorean Alpha 5">
+                        <img
+                            src="./assets/img/Delorean-2.jpg"
+                            alt="Delorean Alpha 5"
+                        />
                     </div>
                     <div class="image-container">
-                        <img src="./assets/img/Delorean-3.jpg" alt="Delorean Alpha 5">
+                        <img
+                            src="./assets/img/Delorean-3.jpg"
+                            alt="Delorean Alpha 5"
+                        />
                     </div>
                     <div class="image-container">
-                        <img src="./assets/img/Delorean-4.jpg" alt="Delorean Alpha 5">
+                        <img
+                            src="./assets/img/Delorean-4.jpg"
+                            alt="Delorean Alpha 5"
+                        />
                     </div>
                     <div class="image-container">
-                        <img src="./assets/img/Delorean-5.jpg" alt="Delorean Alpha 5">
+                        <img
+                            src="./assets/img/Delorean-5.jpg"
+                            alt="Delorean Alpha 5"
+                        />
                     </div>
                 </div>
             </section>
@@ -51,64 +71,90 @@
                 <div class="product-gallery">
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="./assets/img/Electric-car-removebg-preview.png" alt="Electric car image">
+                            <img
+                                src="./assets/img/Electric-car-removebg-preview.png"
+                                alt="Electric car image"
+                            />
                         </div>
                         <p class="product-name">City Car</p>
-                        <button class="product-CTA-button">Cotizar modelo</button>
+                        <button class="product-CTA-button">COTIZAR</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="./assets/img/Electric-car-removebg-preview.png" alt="Electric car image">
+                            <img
+                                src="./assets/img/Electric-car-removebg-preview.png"
+                                alt="Electric car image"
+                            />
                         </div>
                         <p class="product-name">Model: City Car</p>
-                        <button class="product-CTA-button">Cotizar modelo</button>
+                        <button class="product-CTA-button">COTIZAR</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="./assets/img/Electric-car-removebg-preview.png" alt="Electric car image">
+                            <img
+                                src="./assets/img/Electric-car-removebg-preview.png"
+                                alt="Electric car image"
+                            />
                         </div>
                         <p class="product-name">Model: City Car</p>
-                        <button class="product-CTA-button">Cotizar modelo</button>
+                        <button class="product-CTA-button">COTIZAR</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="./assets/img/Electric-car-removebg-preview.png" alt="Electric car image">
+                            <img
+                                src="./assets/img/Electric-car-removebg-preview.png"
+                                alt="Electric car image"
+                            />
                         </div>
                         <p class="product-name">Model: City Car</p>
-                        <button class="product-CTA-button">Cotizar modelo</button>
+                        <button class="product-CTA-button">COTIZAR</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="./assets/img/Electric-car-removebg-preview.png" alt="Electric car image">
+                            <img
+                                src="./assets/img/Electric-car-removebg-preview.png"
+                                alt="Electric car image"
+                            />
                         </div>
                         <p class="product-name">Model: City Car</p>
-                        <button class="product-CTA-button">Cotizar modelo</button>
+                        <button class="product-CTA-button">COTIZAR</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="./assets/img/Electric-car-removebg-preview.png" alt="Electric car image">
+                            <img
+                                src="./assets/img/Electric-car-removebg-preview.png"
+                                alt="Electric car image"
+                            />
                         </div>
                         <p class="product-name">Model: City Car</p>
-                        <button class="product-CTA-button">Cotizar modelo</button>
+                        <button class="product-CTA-button">COTIZAR</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="./assets/img/Electric-car-removebg-preview.png" alt="Electric car image">
+                            <img
+                                src="./assets/img/Electric-car-removebg-preview.png"
+                                alt="Electric car image"
+                            />
                         </div>
                         <p class="product-name">Model: City Car</p>
-                        <button class="product-CTA-button">Cotizar modelo</button>
+                        <button class="product-CTA-button">COTIZAR</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="./assets/img/Electric-car-removebg-preview.png" alt="Electric car image">
+                            <img
+                                src="./assets/img/Electric-car-removebg-preview.png"
+                                alt="Electric car image"
+                            />
                         </div>
                         <p class="product-name">Model: City Car</p>
-                        <button class="product-CTA-button">Cotizar modelo</button>
+                        <button class="product-CTA-button">COTIZAR</button>
                     </div>
                 </div>
                 <div class="product-pagination">
                     <div class="product-pagination-button">
-                        <i class="fa-solid fa-angles-left fa-2xs button-label" ></i>
+                        <i
+                            class="fa-solid fa-angles-left fa-2xs button-label"
+                        ></i>
                     </div>
                     <div class="product-pagination-button">
                         <p class="button-label">1</p>
@@ -120,7 +166,9 @@
                         <p class="button-label">3</p>
                     </div>
                     <div class="product-pagination-button">
-                        <i class="fa-solid fa-angles-right fa-2xs button-label"></i>
+                        <i
+                            class="fa-solid fa-angles-right fa-2xs button-label"
+                        ></i>
                     </div>
                 </div>
             </main>
@@ -132,6 +180,5 @@
                 <p>Todos los derechos reservados</p>
             </footer>
         </div>
-    </body> 
+    </body>
 </html>
-    
