updated the footer styles

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
             </nav>
             <section class="image-gallery">
-                <h1>Presentamos el nuevo DeLorean Alpha 5</h1>
+                <h1>Nuevo DeLorean Alpha 5</h1>
                 <div class="image-gallery-container">
                     <div class="image-container active">
                         <img
