minor fixes to layout

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
                     <i class="fa-solid fa-bars fa-xl"></i>
                     <ul class="menu-list">
                         <li>Inicio</li>
-                        <li>Catálogo</li>
-                        <li>Ofertas</li>
+                        <li>Vehículos</li>
                         <li>Contacto</li>
                     </ul>
                 </div>
