fixed BG image URL

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 alt="Electric car image"
                             />
                         </div>
-                        <p class="product-name">City Car</p>
+                        <p class="product-name">Model: City Car</p>
                         <button class="product-CTA-button">COTIZAR</button>
                     </div>
                     <div class="product-card">
