added new images for the product catalog, updated card style and updated font styles for the site

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
         <link
             rel="stylesheet"
-            href="https://fonts.googleapis.com/css2?family=Roboto&family=Open+Sans"
+            href="https://fonts.googleapis.com/css2?family=Roboto&family=Open+Sans&family=Play"
         />
         <title>Electric Car Store</title>
         <script
@@ -316,7 +316,7 @@ z"
                     <i class="fa-solid fa-bars fa-xl"></i>
                     <ul class="menu-list">
                         <li>Inicio</li>
-                        <li>Vehículos</li>
+                        <li>Catálogo</li>
                         <li>Contacto</li>
                     </ul>
                 </div>
@@ -358,85 +358,88 @@ z"
                 </div>
             </main>
             <section class="products">
+                <div class="cars">
+                    <h2>Catálogo<h2p>
+                </div>
                 <div class="product-gallery">
                     <div class="product-card">
                         <div class="product-image">
                             <img
-                                src="./assets/img/Electric-car-removebg-preview.png"
+                                src="./assets/img/Auto-1.png"
                                 alt="Electric car image"
                             />
                         </div>
-                        <p class="product-name">Model: City Car</p>
+                        <p class="product-name">Mercedes-Benz: EQS 450+</p>
                         <button class="product-CTA-button">COTIZAR</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
                             <img
-                                src="./assets/img/Electric-car-removebg-preview.png"
+                                src="./assets/img/Auto-2.png"
                                 alt="Electric car image"
                             />
                         </div>
-                        <p class="product-name">Model: City Car</p>
+                        <p class="product-name">Tesla: Model Y</p>
                         <button class="product-CTA-button">COTIZAR</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
                             <img
-                                src="./assets/img/Electric-car-removebg-preview.png"
+                                src="./assets/img/Auto-3.png"
                                 alt="Electric car image"
                             />
                         </div>
-                        <p class="product-name">Model: City Car</p>
+                        <p class="product-name">BMW: iX M60</p>
                         <button class="product-CTA-button">COTIZAR</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
                             <img
-                                src="./assets/img/Electric-car-removebg-preview.png"
+                                src="./assets/img/Auto-4.png"
                                 alt="Electric car image"
                             />
                         </div>
-                        <p class="product-name">Model: City Car</p>
+                        <p class="product-name">Mustang Mach-E GT</p>
                         <button class="product-CTA-button">COTIZAR</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
                             <img
-                                src="./assets/img/Electric-car-removebg-preview.png"
+                                src="./assets/img/Auto-3.png"
                                 alt="Electric car image"
                             />
                         </div>
-                        <p class="product-name">Model: City Car</p>
+                        <p class="product-name">BMW: iX M60</p>
                         <button class="product-CTA-button">COTIZAR</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
                             <img
-                                src="./assets/img/Electric-car-removebg-preview.png"
+                                src="./assets/img/Auto-2.png"
                                 alt="Electric car image"
                             />
                         </div>
-                        <p class="product-name">Model: City Car</p>
+                        <p class="product-name">Tesla: Model Y</p>
                         <button class="product-CTA-button">COTIZAR</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
                             <img
-                                src="./assets/img/Electric-car-removebg-preview.png"
+                                src="./assets/img/Auto-4.png"
                                 alt="Electric car image"
                             />
                         </div>
-                        <p class="product-name">Model: City Car</p>
+                        <p class="product-name">Mustang Mach-E GT</p>
                         <button class="product-CTA-button">COTIZAR</button>
                     </div>
                     <div class="product-card">
                         <div class="product-image">
                             <img
-                                src="./assets/img/Electric-car-removebg-preview.png"
+                                src="./assets/img/Auto-1.png"
                                 alt="Electric car image"
                             />
                         </div>
-                        <p class="product-name">Model: City Car</p>
+                        <p class="product-name">Mercedes-Benz: EQS 450+</p>
                         <button class="product-CTA-button">COTIZAR</button>
                     </div>
                 </div>
