change the main gallery title

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ z"
                 </div>
             </nav>
             <main class="image-gallery">
-                <h1>Nuevo DeLorean Alpha 5</h1>
+                <h1>Próximo lanzamiento | DeLorean Alpha 5</h1>
                 <div class="image-gallery-container">
                     <div class="image-container active">
                         <img
